--- a/style.css
+++ b/style.css
@@ -1,9 +1,85 @@
 /*#region reset css */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a,
-abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike,
-strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure,
-figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -13,27 +89,48 @@ figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, t
   overflow: hidden;
   box-sizing: border-box;
 }
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
+
 body {
   line-height: 1;
 }
-ol, ul {
+
+ol,
+ul {
   list-style: none;
 }
-blockquote, q {
+
+blockquote,
+q {
   quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
   content: "";
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 /*#endregion*/
 
 /*#region app css */
@@ -52,54 +149,88 @@ table {
 .L2R {
   flex-direction: row;
 }
+
 .R2L {
   flex-direction: row-reverse;
 }
+
 .U2D {
   flex-direction: column;
 }
+
 .D2U {
   flex-direction: column-reverse;
 }
-.L2R>div, .R2L>div {
+
+.L2R>div,
+.R2L>div {
   height: 100%;
 }
-.U2D>div, .D2U>div {
+
+.U2D>div,
+.D2U>div {
   width: 100%;
 }
+
 .unhidden-x {
   overflow-x: visible;
 }
+
 .unhidden-y {
   overflow-y: visible;
 }
-.L2R.scrollable, .R2L.scrollable {
+
+.L2R.scrollable,
+.R2L.scrollable {
   overflow: scroll hidden;
 }
-.U2D.scrollable, .D2U.scrollable {
+
+.U2D.scrollable,
+.D2U.scrollable {
   overflow: hidden scroll;
 }
+
 /*#endregion*/
 
 #baseVContainer {
   height: 100%;
   width: 100%;
 }
-#baseVContainer div{
-  border: 2px solid rgb(100, 100, 100);
-}
+
 #ClickerScrn {
   flex-grow: 3;
+  position: relative;
 }
+
+#Banner {
+  width: 100%;
+  top: 10%;
+  position: absolute;
+  height: 10%;
+  background-color: rgba(100, 100, 100, .5);
+}
+
 #Contents {
   flex-grow: 6;
+  position: relative;
 }
+
 #CenterArea {
   flex-grow: 5;
+  position: relative;
 }
+
 #Products {
   flex-grow: 4;
+  position: relative;
 }
-#Menu {flex-grow: 1;}
-#Panel {height: 30vh;}
+
+#Menu {
+  flex-grow: 1;
+}
+
+#Panel {
+  height: 30vh;
+}
+
 /*#endregion*/
