--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ table {
 #ClickerScrn {
     flex-grow: 3;
     position: relative;
+    background: linear-gradient(0.5turn, #dff17c, #6cffeb);;
 }
 #MainCanvas{
     position: absolute;
@@ -86,12 +87,20 @@ table {
     height: 100%;
 }
 #Banner {
-    width: 100%;
-    top: 10%;
     position: absolute;
+    width: 100%;
     height: 10%;
+    top: 10%;
     background-color: rgba(100, 100, 100, .5);
+    backdrop-filter: blur(2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#BannerText{
     text-align: center;
+    font-size: 18px;
+
 }
 #ClickableDiamond {
     position: absolute;
@@ -128,5 +137,9 @@ table {
     flex-grow: 4;
     position: relative;
     background-color: lightcoral;
+}
+.prod-item{
+    width: 100px;
+    border: solid,gray;
 }
 /*#endregion*/
