--- a/style.css
+++ b/style.css
@@ -79,9 +79,10 @@ table {
 #ClickerScrn {
     flex-grow: 3;
     position: relative;
-    background: linear-gradient(0.5turn, #dff17c, #6cffeb);;
+    background: linear-gradient(0.5turn, #dff17c, #6cffeb);
+    ;
 }
-#MainCanvas{
+#MainCanvas {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -97,7 +98,7 @@ table {
     justify-content: center;
     align-items: center;
 }
-#BannerText{
+#BannerText {
     text-align: center;
     font-size: 18px;
 
@@ -138,8 +139,9 @@ table {
     position: relative;
     background-color: lightcoral;
 }
-.prod-item{
+.prod-item {
+    position: absolute;
     width: 100px;
-    border: solid,gray;
+    border: solid, gray;
 }
 /*#endregion*/
