--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    overflow: hidden;
     box-sizing: border-box;
 }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -36,40 +35,11 @@ table {
     height: 100vh;
 }
 /*#region regular class */
-.container {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-}
-.L2R {
-    flex-direction: row;
-}
-.R2L {
-    flex-direction: row-reverse;
-}
-.U2D {
-    flex-direction: column;
-}
-.D2U {
-    flex-direction: column-reverse;
-}
-.L2R>div, .R2L>div {
-    height: 100%;
-}
-.U2D>div, .D2U>div {
-    width: 100%;
-}
 .unhidden-x {
     overflow-x: visible;
 }
 .unhidden-y {
     overflow-y: visible;
-}
-.L2R.scrollable, .R2L.scrollable {
-    overflow: scroll hidden;
-}
-.U2D.scrollable, .D2U.scrollable {
-    overflow: hidden scroll;
 }
 /*#endregion*/
 #baseVContainer {
@@ -77,11 +47,14 @@ table {
     width: 100%;
 }
 #ClickerScrn {
-    flex-grow: 3;
-    position: relative;
-    background: linear-gradient(0.5turn, #dff17c, #6cffeb);;
+    top: 0;
+    left: 0;
+    width: 35%;
+    height: 100%;
+    position: absolute;
+    background: linear-gradient(0.5turn, #dff17c, #6cffeb);
 }
-#MainCanvas{
+#MainCanvas {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -97,7 +70,7 @@ table {
     justify-content: center;
     align-items: center;
 }
-#BannerText{
+#BannerText {
     text-align: center;
     font-size: 18px;
 
@@ -111,35 +84,69 @@ table {
     width: 256px;
     height: 256px;
     border-radius: 50%;
-    background-color: aqua;
+    background-color: lightseagreen;
 }
 #ClickableDiamond:hover {
     width: 266px;
     height: 266px;
 }
-#Contents {
-    flex-grow: 6;
-    position: relative;
-}
 #CenterArea {
-    flex-grow: 5;
+    top: 0;
+    left: 35%;
+    width: 35%;
+    height: 100%;
     position: relative;
 }
 #Menu {
-    flex-grow: 1;
-    background-color: aquamarine;
+    top: 0;
+    left: 35%;
+    width: 35%;
+    height: 60%;
+    position: absolute;
+    background-color: khaki;
+    border: solid 2px red;
 }
 #Panel {
-    height: 30vh;
+    top: 60%;
+    left: 35%;
+    width: 35%;
+    height: 40%;
+    position: absolute;
     background-color: thistle;
+    border: solid 2px peru;
 }
 #Products {
-    flex-grow: 4;
+    top: 0;
+    right: 0;
+    width: 30%;
+    height: 100%;
+    position: absolute;
+    z-index: 3;
+    background-color: burlywood;
+}
+.prod-item {
+    height: 10%;
+    width: 100%;
     position: relative;
-    background-color: lightcoral;
 }
-.prod-item{
-    width: 100px;
-    border: solid,gray;
+.prod-cover {
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: auto;
+    height: auto;
+    position: absolute;
+    background: linear-gradient(0.5turn, #a480ff, #74ffec);
+    border: solid 2px gray;
+    overflow-x: visible;
+    transition: 1s;
 }
+.prod-cover:hover {
+    left: -10px;
+}
+/*#endregion*/
+
+/*#region mobile phone css(優先度低)*/
+
 /*#endregion*/
