--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
+    font-size: 16px;
     font: inherit;
     vertical-align: baseline;
     box-sizing: border-box;
@@ -28,6 +28,7 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
 /*#endregion*/
 /*#region app css */
 #game {
@@ -72,17 +73,16 @@ table {
 }
 #BannerText {
     text-align: center;
-    font-size: 18px;
-
+    font-size: 2rem;
 }
 #ClickableDiamond {
-    position: absolute;
-    transform: translate(-50%, -50%);
-    transition: 0.5s;
     top: 48%;
     left: 50%;
     width: 256px;
     height: 256px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    transition: 0.5s;
     border-radius: 50%;
     background-color: lightseagreen;
 }
@@ -121,8 +121,8 @@ table {
     width: 30%;
     height: 100%;
     position: absolute;
-    z-index: 3;
     background-color: burlywood;
+    z-index: 3;
 }
 .prod-item {
     height: 10%;
@@ -139,8 +139,7 @@ table {
     position: absolute;
     background: linear-gradient(0.5turn, #a480ff, #74ffec);
     border: solid 2px gray;
-    overflow-x: visible;
-    transition: 1s;
+    transition: 0.1s;
 }
 .prod-cover:hover {
     left: -10px;
