--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ table {
 /*#endregion*/
 @font-face {
 	font-family: 'AmaticSC-Bold';
-	src: url(/fonts/AmaticSC-Bold.ttf);
+	src: url(./fonts/AmaticSC-Bold.ttf);
 }
 html {
 	font-size: 1.95vh;
@@ -78,7 +78,7 @@ html {
 	align-items: center;
 }
 #BannerText {
-	width: 34%;
+	max-width: 34%;
 	text-align: center;
 	font-size: 2.3rem;
 }
@@ -151,15 +151,20 @@ html {
 .prod-cover:hover {
 	left: -10px;
 }
-
 .prod-cover div {
-
 	text-align: end;
 	display: flex;
 	line-height: 1.6rem;
 	bottom: 0;
 	position: absolute;
 	font-size: 1rem;
+}
+.prod-title {
+	font-size: 1.5rem;
+	left: 5%;
+}
+.prod-upgrade {
+	right: 3%;
 }
 /*#endregion*/
 
